--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
   background-color: #f0f4f8;
-  font-family: "National Park", sans-serif;
+ .mrs-sheppards-regular {
+  font-family: "Mrs Sheppards", cursive;
+  font-weight: 400;
+  font-style: normal;
   text-align: center;
   padding: 50px;
 }
@@ -11,6 +14,9 @@ h1 {
 
 p {
   color: #555;
-  font-family: "National Park", sans-serif;
+.mrs-sheppards-regular {
+  font-family: "Mrs Sheppards", cursive;
+  font-weight: 400;
+  font-style: normal;
   font-size: 24px;
 }
