--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: #f0f4f8;
+  font-family: "Mrs Sheppards", cursive; /* Added font-family to body */
 }
 
 .mrs-sheppards-regular {
@@ -12,10 +13,11 @@ body {
 
 h1 {
   color: #2c3e50;
+  font-family: "Mrs Sheppards", cursive; /* Added font-family to h1 */
 }
 
 p {
   color: #555;
-  font-family: "Mrs Sheppards", cursive; /* Added font-family to p */
+  font-family: "Mrs Sheppards", cursive;
   font-size: 24px;
 }
