--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .mrs-sheppards-regular {
-  font-family: "Mrs Sheppards", cursive;
+  font-family: "Mrs Sheppards";
   font-weight: 400;
   font-style: normal;
   text-align: center;
@@ -13,7 +13,7 @@ body {
 
 h1 {
   color: #2c3e50;
-  font-family: "Mrs Sheppards", cursive; /* Added font-family to h1 */
+  font-family: "Mrs Sheppards";
 }
 
 p {
