--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #f0f4f8;
-  font-family: "Mrs Sheppards", cursive; /* Added font-family to body */
+  font-family: "Mrs Sheppards";
 }
 
 .mrs-sheppards-regular {
