--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #f0f4f8;
-  font-family: "Hanalei Fill", system-ui; /* Added sans-serif fallback */
+  font-family: "Hanalei Fill", system-ui; /* Added system-ui as a fallback */
 }
 
 .hanalei-fill-regular {
@@ -20,8 +20,7 @@ h1 {
 
 p {
   color: #555;
-.hanalei-fill-regular {
-  font-family: "Hanalei Fill", system-ui;
-  font-weight: 400;
-  font-style: normal;
+  font-family: "Hanalei Fill", system-ui; /* Apply font to p */
+  font-weight: 400; /* Ensure it is the regular weight */
+  font-style: normal; /* Ensure it is not italicized */
 }
